# ffmpeg-opencv-simple-player

./: CMakeLists.txt  build.sh  clean.sh  debug.sh  main.cpp  test.sh
